--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,108 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+@import './loder.css';
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.search-section {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+align-items: center;
 }
+
+.js-search-input {
+  width: 272px;
+height: 40px;
+font-family: Montserrat;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.04em;
+text-align: left;
+border-radius: 4px 4px 4px 4px;
+opacity: 0px;
+background: rgba(255, 255, 255, 1);
+border: 1px solid rgba(128, 128, 128, 1)
+}
+
+.btn {
+  width: 91px;
+height: 40px;
+font-family: Montserrat;
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0.04em;
+text-align: left;
+color: rgba(255, 255, 255, 1);
+padding: 8px 16px 8px 16px;
+border-radius: 8px 8px 8px 8px;
+opacity: 0px;
+background: rgba(78, 117, 255, 1);
+}
+
+.btn:hover {
+  background: rgba(108, 140, 255, 1);
+
+}
+
+.js-gallery {
+display: flex;
+flex-wrap: wrap;
+gap: 24px;
+row-gap: 24px;
+padding: 24px 156px;
+justify-content: center;
+align-items: center;
+}
+
+.photo-card {
+display: flex;
+flex-wrap: wrap;
+width: calc((100% - 48px) / 3);
+}
+
+.gallery-img {
+width: 100%;
+top: 108px;
+left: 156px;
+gap: 24px;
+border: 1px 1px 1px 1px;
+opacity: 0px;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+align-items: center;
+gap: 8px;
+}
+
+.card-text {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+align-items: center;
+}
+
+ .load-more  {
+width: 150px;
+height: 40px;
+top: 1236px;
+left: 657px;
+padding: 8px 16px 8px 16px;
+gap: 10px;
+border-radius: 8px 8px 8px 8px;
+font-family: Montserrat;
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0.04em;
+text-align: center;
+color: rgba(255, 255, 255, 1);
+background: rgba(78, 117, 255, 1);
+margin: 0 50%;   
+  } 
+
+  .is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
